--- a/index.html
+++ b/index.html
@@ -115,29 +115,35 @@ yes.addEventListener("click", function() {
 
 <script type='text/javascript'>
 function initEmbeddedMessaging() {
-try {
-embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
+  try {
+    embeddedservice_bootstrap.settings.language = 'en_US';
+    embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
 
-        // Prepopulate pre-chat fields (Embedded Messaging)
+    // Grab the current values from localStorage where your form saves them
+    const email = localStorage.getItem("chat_email") || "";
+    const first = localStorage.getItem("chat_first") || "";
+    const last = localStorage.getItem("chat_last") || "";
+
+    // Map them to the Salesforce Pre-chat field names
     embeddedservice_bootstrap.settings.prepopulatedPrechatFields = {
-      Email: sessionStorage.getItem("visitorEmail") || "",
-      FirstName: sessionStorage.getItem("visitorFirstName") || "",
-      LastName: sessionStorage.getItem("visitorLastName") || ""
+      "FirstName": first,
+      "LastName": last,
+      "Email": email
     };
 
-embeddedservice_bootstrap.init(
-'00DDE0000044T2w',
-'New_Infra_Support',
-'https://silicon4--chattest3.sandbox.my.site.com/ESWNewInfraSupport1769449481682',
-{
-scrt2URL: 'https://silicon4--chattest3.sandbox.my.salesforce-scrt.com'
-}
-);
-} catch (err) {
-console.error('Error loading Embedded Messaging: ', err);
-}
+    embeddedservice_bootstrap.init(
+      '00DDE0000044T2w',
+      'New_Infra_Support',
+      'https://silicon4--chattest3.sandbox.my.site.com/ESWNewInfraSupport1769449481682',
+      {
+        scrt2URL: 'https://silicon4--chattest3.sandbox.my.salesforce-scrt.com'
+      }
+    );
+  } catch (err) {
+    console.error('Error loading Embedded Messaging: ', err);
+  }
 };
+    
 </script>
 <script type='text/javascript' src='https://silicon4--chattest3.sandbox.my.site.com/ESWNewInfraSupport1769449481682/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
