--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 
     <div id="visitorInfo" style="margin:16px 0; padding:12px; border:1px solid #ccc; max-width:520px;">
         <h3 style="margin:0 0 10px 0;">Your info (required)</h3>
-
         <label>Email *</label><br/>
         <input id="vEmail" type="email" placeholder="name@company.com" style="width:100%; padding:8px;" required />
         <div style="height:10px;"></div>
-
         <div style="display:flex; gap:10px;">
             <div style="flex:1;">
                 <label>First name *</label><br/>
@@ -25,7 +23,6 @@
                 <input id="vLast" type="text" placeholder="Last" style="width:100%; padding:8px;" required />
             </div>
         </div>
-
         <div id="vErr" style="color:#b00020; margin-top:10px; display:none;">
             Please enter Email, First Name, and Last Name.
         </div>
@@ -40,7 +37,6 @@
     </div>
 
     <script>
-        // --- 1. Form Persistence Logic ---
         const fields = {
             vEmail: document.getElementById("vEmail"),
             vFirst: document.getElementById("vFirst"),
@@ -60,62 +56,64 @@
             fields.vLast.addEventListener(evt, () => localStorage.setItem("chat_last", fields.vLast.value.trim()));
         });
 
-        window.getVisitorInfo = function () {
+        window.addEventListener("onEmbeddedMessagingReady", () => {
+            console.log("Salesforce Messaging is ready!");
+            // This ensures data is ready before the user even clicks the button
+            updateSalesforceFields();
+        });
+
+        function updateSalesforceFields() {
             const email = fields.vEmail.value.trim();
             const first = fields.vFirst.value.trim();
             const last = fields.vLast.value.trim();
-            const ok = email && first && last;
-            fields.vErr.style.display = ok ? "none" : "block";
-            return ok ? { email, first, last } : null;
-        };
 
-        // --- 2. Modal and Chat Launch Logic ---
+            if (window.embeddedservice_bootstrap) {
+                embeddedservice_bootstrap.settings.prepopulatedPrechatFields = {
+                    "_FirstName": first,
+                    "_LastName": last,
+                    "_Email": email
+                };
+                console.log("Fields mapped:", embeddedservice_bootstrap.settings.prepopulatedPrechatFields);
+            }
+        }
+
         const liveBtn = document.getElementById("liveChatBtn");
         const modal = document.getElementById("askInfraModal");
         const yes = document.getElementById("askYes");
         const no = document.getElementById("askNo");
 
         liveBtn.addEventListener("click", () => modal.style.display = "block");
-
-        no.addEventListener("click", () => {
-            window.location.href = "https://yaqs.corp.google.com/silicon/q/new?tag=infra";
-        });
+        no.addEventListener("click", () => window.location.href = "https://yaqs.corp.google.com/silicon/q/new?tag=infra");
 
         yes.addEventListener("click", function() {
-            const visitor = window.getVisitorInfo();
-            if (!visitor) return;
-
-            // Update Salesforce settings with current form data right before launch
-            if (window.embeddedservice_bootstrap) {
-                embeddedservice_bootstrap.settings.prepopulatedPrechatFields = {
-                    "_FirstName": visitor.first,
-                    "_LastName": visitor.last,
-                    "_Email": visitor.email
-                };
+            const email = fields.vEmail.value.trim();
+            const first = fields.vFirst.value.trim();
+            const last = fields.vLast.value.trim();
+           
+            if (!email || !first || !last) {
+                fields.vErr.style.display = "block";
+                return;
             }
-
+            fields.vErr.style.display = "none";
             modal.style.display = "none";
+
+            // Final update right before launch
+            updateSalesforceFields();
 
             if (window.embeddedservice_bootstrap && embeddedservice_bootstrap.utilAPI) {
                 embeddedservice_bootstrap.utilAPI.launchChat();
-            } else {
-                alert("Chat is still loading. Please try again in a moment.");
             }
         });
 
-        // --- 3. Salesforce Initialization ---
         function initEmbeddedMessaging() {
             try {
                 embeddedservice_bootstrap.settings.language = 'en_US';
                 embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
-
                 embeddedservice_bootstrap.init(
                     '00DDE0000044T2w',
                     'New_Infra_Support',
                     'https://silicon4--chattest3.sandbox.my.site.com/ESWNewInfraSupport1769449481682',
-                    {
-                        scrt2URL: 'https://silicon4--chattest3.sandbox.my.salesforce-scrt.com'
-                    }
+                    { scrt2URL: 'https://silicon4--chattest3.sandbox.my.salesforce-scrt.com' }
                 );
             } catch (err) {
                 console.error('Error loading Embedded Messaging: ', err);
