--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@ window.addEventListener("onEmbeddedMessagingReady", () => {
   embeddedservice_bootstrap.prechatAPI.setVisiblePrechatFields({
     "_email": {
       value: "nardosa@google.com",
-      isEditableByEndUser: false
+      isEditableByEndUser: true
     },
     "_firstName": {
       value: "Nardos",
-      isEditableByEndUser: false
+      isEditableByEndUser: true
     },
     "_lastName": {
       value: "Assefa",
-      isEditableByEndUser: false
+      isEditableByEndUser: true
     },
     "_subject": {
       value: "",
