--- a/index.html
+++ b/index.html
@@ -183,27 +183,26 @@ window.addEventListener("onEmbeddedMessagingReady", async () => {
  * Init Embedded Messaging
  ***********************/
 function initEmbeddedMessaging() {
-  try {
-    embeddedservice_bootstrap.settings.language = "en_US";
-    embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
+try {
+embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
-    embeddedservice_bootstrap.init(
-      "00DDE0000044T2w",
-      "New_Infra_Support",
-      "https://silicon4--chattest3.sandbox.my.site.com/ESWNewInfraSupport1769449481682",
-      {
-        scrt2URL: "https://silicon4--chattest3.sandbox.my.salesforce-scrt.com"
-      }
-    );
-  } catch (err) {
-    console.error("Error loading Embedded Messaging:", err);
-  }
+embeddedservice_bootstrap.init(
+'00DDp0000015YvI',
+'New_Infra_Support',
+'https://silicon4.my.site.com/ESWNewInfraSupport1770290038401',
+{
+scrt2URL: 'https://silicon4.my.salesforce-scrt.com'
 }
+);
+} catch (err) {
+console.error('Error loading Embedded Messaging: ', err);
+}
+};
 </script>
 
 <script
   type="text/javascript"
-  src="https://silicon4--chattest3.sandbox.my.site.com/ESWNewInfraSupport1769449481682/assets/js/bootstrap.min.js"
+  src="https://silicon4.my.site.com/ESWNewInfraSupport1770290038401/assets/js/bootstrap.min.js"
   onload="initEmbeddedMessaging()">
 </script>
 
